[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'resigner'
authors = [
  {name='Takahiro Yoshimura', email='takahiro_y@monolithworks.co.jp'},
  {name='Ken-ya Yoshimura', email='kenya_y@monolithworks.co.jp'},
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
readme = "README.md"
keywords = []
dependencies = []
requires-python = ">=3.7"
dynamic = ['version', 'description']

[project.optional-dependencies]
dev = [
  "mypy~=1.2.0",
  "pyproject-flake8~=5.0.4",
]

[project.urls]
Source = "https://github.com/monolithworks/resigner"

[project.scripts]
resigner = "resigner:entry"

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "redundant-expr"

# pyproject-flake8 (pflake8)
[tool.flake8]
extend-ignore = "E301,E302,E265,E114,E501,E231,E252,E261,E701,E722,E741,F821"
indent-size = 2
